Just adding debug flag

--- a/comp/src/Makefile
+++ b/comp/src/Makefile
@@ -1,20 +1,20 @@
 etapa4: y.tab.o lex.yy.o main.o hash.o astree.o semantic.o
-	gcc -o etapa4 lex.yy.o main.o hash.o astree.o semantic.o -Wall
+	gcc -ggdb -o etapa4 lex.yy.o main.o hash.o astree.o semantic.o -Wall
 
 lex.yy.o: lex.yy.c y.tab.c
-	gcc -c lex.yy.c
+	gcc -ggdb -c lex.yy.c
 
 y.tab.o: y.tab.c
-	gcc -c y.tab.c -Wall
+	gcc -ggdb -c y.tab.c -Wall
 
 hash.o: hash.c
-	gcc -c hash.c -Wall
+	gcc -ggdb -c hash.c -Wall
 
 main.o: main.c
-	gcc -c main.c -Wall
+	gcc -ggdb -c main.c -Wall
 
 astree.o: astree.c
-	gcc -c astree.c -Wall
+	gcc -ggdb -c astree.c -Wall
 
 lex.yy.c: scanner.l
 	lex --header-file=lex.yy.h scanner.l
@@ -23,7 +23,7 @@ y.tab.c: parser.y
 	yacc -d parser.y
 
 semantic.o: semantic.c
-	gcc -c semantic.c -Wall
+	gcc -ggdb -c semantic.c -Wall
 
 clean:
 	rm lex.yy.c y.tab.c y.tab.h etapa4 *.o *~
